Signed-off-by: Sakib Ademovic <sademovic2@etf.unsa.ba>

--- a/SarajevoTravel1.0/SarajevoTravel1.0/SarajevoTravel1.0.csproj
+++ b/SarajevoTravel1.0/SarajevoTravel1.0/SarajevoTravel1.0.csproj
@@ -92,6 +92,9 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AdminPanel.xaml.cs">
+      <DependentUpon>AdminPanel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Baza.cs" />
     <Compile Include="LoginViewModel.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -109,9 +112,6 @@
     <Compile Include="RegistracijaViewModel.cs" />
     <Compile Include="TabelaAdmin.cs" />
     <Compile Include="TabelaKorisnik.cs" />
-    <Compile Include="View\BlankPage1.xaml.cs">
-      <DependentUpon>BlankPage1.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
@@ -146,7 +146,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\BlankPage1.xaml">
+    <Page Include="AdminPanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
