--- a/SarajevoTravel1.0/SarajevoTravel1.0/SarajevoTravel1.0.csproj
+++ b/SarajevoTravel1.0/SarajevoTravel1.0/SarajevoTravel1.0.csproj
@@ -112,14 +112,14 @@
     <Compile Include="RegistracijaViewModel.cs" />
     <Compile Include="TabelaAdmin.cs" />
     <Compile Include="TabelaKorisnik.cs" />
-    <Compile Include="Login.xaml.cs">
-      <DependentUpon>Login.xaml</DependentUpon>
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\PodaciControl.xaml.cs">
+    <Compile Include="PodaciControl.xaml.cs">
       <DependentUpon>PodaciControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\Registracija.xaml.cs">
+    <Compile Include="Registracija.xaml.cs">
       <DependentUpon>Registracija.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -150,15 +150,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Login.xaml">
+    <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\PodaciControl.xaml">
+    <Page Include="PodaciControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Registracija.xaml">
+    <Page Include="Registracija.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
